smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/mixins-usage-in-explicit-1-0.smithy
// Parse error at line 5, column 19 near ` Bar`: Mixins can only be used with Smithy version 2 or later. Attempted to use mixins with version `1.0`.
$version: "1.0"
namespace smithy.example

structure Foo with Bar {}
